# haydov

./: .dockerignore  .envrc  .example.env  .gitignore  .prettierrc.json  .yarnrc.yml  Cargo.toml  Dockerfile  README.md  Tiltfile  compose.override.yml  compose.yaml  config.local.yaml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  flake.nix  go.mod  journal.md  lerna.json  nx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skaffold.yaml
app/: index.js  (+1 more)
services/geography/: .env.defaults  .env.example  .env.secret  Cargo.toml  Dockerfile  bacon.toml  compose.override.yml  compose.production.yml  config.json  configmap.yaml  crontab  kustomization.yaml
services/geography/coder/: pelias.json
services/geography/dispatcher/: .dockerignore  .env.defaults  .env.example  Cargo.toml  Dockerfile  README.md  bacon.toml  config-schema.json  config.json  deployment.yaml  kustomization.yaml
services/geography/dispatcher/base/: configmap.yaml  deployment.yaml  service.yaml
services/geography/dispatcher/src/: errors.rs  main.rs  settings.rs
services/geography/importer/: .env.defaults  .env.example  .env.secret.defaults  Dockerfile  deployment.yaml  kustomization.yaml  package.json
services/geography/src/: download.rs  main.rs  pull.rs
services/geography/storage/: .env.secret.example  Dockerfile  configmap.yaml  kustomization.yaml
services/osm/: .env.example  Cargo.toml  compose.override.yml  compose.production.yml  compose.yml  config.json
services/osm/dispatcher/: Cargo.toml  README.md
services/osm/src/: config.rs  download.rs  osm.rs  pull.rs  server.rs  settings.rs  storage.rs
services/osm/storage/: config.json
(+249 files in other folders)
