[package]
name = "osm-dispatcher"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pull"
path = "src/pull.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
aws-config = { version = "1.8.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.96.0"
axum = "0.8.4"
bytes = "1.10.1"
config = "0.15.11"
futures-util = "0.3.31"
libloading = "0.8.8"
log = "0.4.27"
md5 = "0.8.0"
reqwest = {version = "0.12.22", features = ["stream"] }
serde = "1.0.219"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tower = "0.5.2"
url = { version = "2.5.4", features = ["serde"] }
